--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
   },
@@ -28,7 +30,28 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "quotes": [
+        "warn",
+        "single",
+        {
+          "allowTemplateLiterals": true
+        }
+      ],
+      "react-hooks/rules-of-hooks": "error",
+      "no-multiple-empty-lines": [
+        "warn",
+        {
+          "max": 1
+        }
+      ],
+      "react-hooks/exhaustive-deps": "warn",
+      "semi": [
+        "error",
+        "always"
+      ]
+    }
   },
   "browserslist": {
     "production": [
