--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "asyriala-tenet",
   "version": "0.1.0",
+  "homepage": "https://mistersyntax.github.io/asyriala-tenet/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -14,6 +15,7 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "gh-pages": "^4.0.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "start-api": "json-server --watch src/db.json --port 3333",
     "build": "react-scripts build",
