--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^14.1.1",
+    "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
@@ -74,6 +74,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "msw": "^0.44.0"
   }
 }
